--- a/SwiftRSS.xcodeproj/xcshareddata/xcschemes/SwiftRSS.xcscheme
+++ b/SwiftRSS.xcodeproj/xcshareddata/xcschemes/SwiftRSS.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "CF99858C1C9CC428003E09AA"
                BuildableName = "SwiftRSS.framework"
                BlueprintName = "SwiftRSS"
-               ReferencedContainer = "container:SwiftRSS_Example.xcodeproj">
+               ReferencedContainer = "container:SwiftRSS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -48,7 +48,7 @@
             BlueprintIdentifier = "CF99858C1C9CC428003E09AA"
             BuildableName = "SwiftRSS.framework"
             BlueprintName = "SwiftRSS"
-            ReferencedContainer = "container:SwiftRSS_Example.xcodeproj">
+            ReferencedContainer = "container:SwiftRSS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -66,7 +66,7 @@
             BlueprintIdentifier = "CF99858C1C9CC428003E09AA"
             BuildableName = "SwiftRSS.framework"
             BlueprintName = "SwiftRSS"
-            ReferencedContainer = "container:SwiftRSS_Example.xcodeproj">
+            ReferencedContainer = "container:SwiftRSS.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
